tests/parser/parse-while-let.5.bad.error
error: Malformed while-let expression
  --> test:4:45
   |
 4 |  (define f (while-let :label (Some x) = (moo)))
   |                                              ^ expected body
